<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">网易新闻</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="slidingright_denglu">立即登录</string>
    <string name="slidingright_score">赢积分  抢大礼!</string>
    <string name="slidingright_read">阅读</string>
    <string name="slidingright_fav">收藏</string>
    <string name="slidingright_head">上头条</string>
    <string name="slidingright_message">消息</string>
    <string name="slidingright_mail">邮件</string>
    <string name="slidingright_cover">上封面</string>
    <string name="slidingright_comm">跟帖</string>
    <string name="slidingright_caipiao">彩票</string>
    <string name="search_title">搜索新闻</string>
    <string name="search_editext">请输入关键字...</string>
    <string name="login_title">登录</string>
    <string name="login_user">网易通行证/手机号</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_login_way">还可以选择以下方式登录</string>
    <string name="login_login_sina">新浪微博登录</string>
    <string name="login_login_qq">QQ账号登录</string>
    <string name="login_login_forget">忘记密码?</string>
    <string name="login_login_register">注册网易通行证</string>
    <string name="setting_back">设置</string>
    <string name="register_register">注册</string>

</resources>