<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:alpha="100"
    android:orientation="vertical"
    tools:context="com.jumige.mobile.news.activity.MainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#e0000000" >

        <TextView
            android:id="@+id/tv_slidingmenu_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawableTop="@drawable/slidingleft_login"
            android:text="@string/slidingright_denglu"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_slidingmenu_right"
            android:layout_centerHorizontal="true"
            android:text="@string/slidingright_score"
            android:textColor="#ffe384" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:drawableTop="@drawable/slidingleft_read"
            android:gravity="center"
            android:text="@string/slidingright_read"
            android:textColor="#808a87" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:drawableTop="@drawable/slidingleft_fav"
            android:gravity="center"
            android:text="@string/slidingright_fav"
            android:textColor="#808a87" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="25dp"
            android:drawableTop="@drawable/slidingleft_comm"
            android:gravity="center"
            android:text="@string/slidingright_comm"
            android:textColor="#808a87" />
    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="3"
        android:divider="#ffffff" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/slidingleft_head"
            android:gravity="center"
            android:text="@string/slidingright_head"
            android:textColor="#c0c0c0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/slidingleft_message"
            android:gravity="center"
            android:text="@string/slidingright_message"
            android:textColor="#c0c0c0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/slidingleft_mail"
            android:gravity="center"
            android:text="@string/slidingright_mail"
            android:textColor="#c0c0c0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/slidingleft_cover"
            android:gravity="center"
            android:text="@string/slidingright_cover"
            android:textColor="#c0c0c0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/slidingleft_caipiao"
            android:gravity="center"
            android:text="@string/slidingright_caipiao"
            android:textColor="#c0c0c0" />
    </LinearLayout>

</LinearLayout>