<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0" >

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/login_user" />

            <EditText
                android:id="@+id/edt_login_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/login_user"
                android:singleLine="true"
                android:textColor="#818181" />
        </LinearLayout>

        <TextView
            android:layout_width="265dp"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:background="#cccccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/login_password" />

            <EditText
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:singleLine="true"
                android:textColor="#818181" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ll_login"
        android:layout_marginTop="15dp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/login_login"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_login_loginway"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_login"
        android:layout_marginTop="50dp"
        android:background="#f0f0f0"
        android:text="@string/login_login_way"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_login_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_login"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/tv_login_loginway"
        android:background="#f0f0f0"
        android:text="@string/login_login_forget"
        android:textColor="#818181" />

    <TextView
        android:id="@+id/tv_login_sina"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_login_loginway"
        android:layout_marginTop="10dp"
        android:background="#d52b2a"
        android:drawableLeft="@drawable/login_sina"
        android:gravity="center"
        android:text="@string/login_login_sina"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tv_login_qq"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_login_loginway"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tv_login_sina"
        android:background="#288bd7"
        android:drawableLeft="@drawable/login_qq"
        android:gravity="center"
        android:text="@string/login_login_qq"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login_login_register"
        android:textColor="#c00000"
        android:textSize="18sp" />

</RelativeLayout>