<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0" >

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/login_user" />

            <EditText
                android:id="@+id/edt_register_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/login_user"
                android:singleLine="true"
                android:textColor="#818181" />
        </LinearLayout>

        <TextView
            android:layout_width="265dp"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:background="#cccccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/login_password" />

            <EditText
                android:id="@+id/edt_register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#818181" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_register_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ll_register"
        android:layout_marginTop="15dp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/register_register"
        android:textSize="18sp" />






</RelativeLayout>